crates/cockpitctl-feature-state/tests/snapshots/snapshot_tests__feature_catalog.snap
---
source: crates/cockpitctl-feature-state/tests/snapshot_tests.rs
expression: catalog
---
[
    (
        "hooks",
        "--disable-hooks",
        true,
    ),
    (
        "buildfix",
        "--disable-buildfix",
        true,
    ),
    (
        "policy-signing",
        "--disable-policy-signing",
        true,
    ),
]
