crates/cockpitctl-feature-state/tests/snapshots/snapshot_tests__runtime_state_all_disabled.snap
---
source: crates/cockpitctl-feature-state/tests/snapshot_tests.rs
expression: view
---
[
    (
        "hooks",
        false,
    ),
    (
        "buildfix",
        false,
    ),
    (
        "policy-signing",
        false,
    ),
]
