crates/cockpitctl-feature-state/tests/snapshots/snapshot_tests__runtime_state_all_enabled.snap
---
source: crates/cockpitctl-feature-state/tests/snapshot_tests.rs
expression: view
---
[
    (
        "hooks",
        true,
    ),
    (
        "buildfix",
        true,
    ),
    (
        "policy-signing",
        true,
    ),
]
