crates/cockpitctl-feature-state/tests/snapshots/snapshot_tests__runtime_state_from_cli_args.snap
---
source: crates/cockpitctl-feature-state/tests/snapshot_tests.rs
expression: view
---
[
    (
        "hooks",
        true,
    ),
    (
        "buildfix",
        false,
    ),
    (
        "policy-signing",
        false,
    ),
]
